--- a/app/src/main/res/layout/fragment_footer.xml
+++ b/app/src/main/res/layout/fragment_footer.xml
@@ -5,12 +5,11 @@
     android:orientation="vertical"
     tools:context="com.example.syauqi.myapplication.FooterFragment">
 
-    <TextView
+
+    <Button
+        android:id="@+id/btnShow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:gravity="center"/>
+        android:text="Show"/>
 
 </LinearLayout>
