--- a/app/src/main/res/layout/fragment_halo.xml
+++ b/app/src/main/res/layout/fragment_halo.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Halo Brader !"
+        android:text="Halo Brader"
         android:textSize="30dp"
         android:gravity="center"/>
 
