--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -6,9 +6,14 @@
     android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
-    <ListView
-        android:id="@+id/listProduct"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <ListView
+            android:id="@+id/listProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+    </ScrollView>
 
 </LinearLayout>
