--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
+    android:background="#212121"
     tools:context="com.example.syauqi.myapplication.WelcomeActivity">
     
     <LinearLayout
@@ -13,28 +15,37 @@
         android:orientation="horizontal"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:gravity="center"
-        android:background="@android:color/black">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:gravity="center">
         <Button
             android:id="@+id/btnHome"
             android:background="@drawable/buttonselectorstyle"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="40dp"
             android:text="Home"
             android:textColor="#fff"/>
         <Button
             android:id="@+id/btnProduct"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/buttonselectorstyle"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="40dp"
             android:text="Product"
+            android:textColor="#fff"/>
+        <Button
+            android:id="@+id/btnRefactory"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/buttonselectorstyle"
+            android:layout_width="90dp"
+            android:layout_height="40dp"
+            android:text="Refactory"
             android:textColor="#fff"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="300dp"
         android:orientation="vertical"
         android:id="@+id/container" />
 
@@ -47,13 +58,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="#212121">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/welcome"
-            android:textSize="30dp"
-            android:gravity="center"/>
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textColor="#f23557"/>
         <Button
             android:id="@+id/logout"
             android:background="#000"
