--- a/app/src/main/res/layout/fragment_halo.xml
+++ b/app/src/main/res/layout/fragment_halo.xml
@@ -9,7 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Halo Brader"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:textColor="#f23557"
+        android:textSize="20dp"
+        android:gravity="center"
+        android:paddingTop="20dp"
+        android:paddingBottom="10dp"/>
 
 </FrameLayout>
