--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.syauqi.myapplication.ProductFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#000">
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
@@ -13,7 +14,9 @@
         <ListView
             android:id="@+id/listProduct"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+            android:layout_height="wrap_content"
+            android:divider="#fff"
+            android:dividerHeight="2px"/>
     </ScrollView>
 
 </LinearLayout>
