--- a/app/src/main/res/layout/fragment_footer.xml
+++ b/app/src/main/res/layout/fragment_footer.xml
@@ -2,18 +2,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:gravity="center"
     tools:context="com.example.syauqi.myapplication.FooterFragment">
 
 
+
     <Button
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/buttonselectorstyle"
         android:id="@+id/btnShow"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Show"
-        android:layout_gravity="center"
         android:textColor="#fff"/>
 
 </LinearLayout>
